Mobile browser viewport support
Added the meta viewport tag to the rest of the HTML files (not just index.html oopsies)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <body>
         <div class="body-text">
-            <h1 style="padding-left: 100px;">Welcome to my homepage :D</h1>
+            <h1>Welcome to my homepage :D</h1>
             <ul style="text-align: center;">
                 <li style="margin-left: 106px;">
                     <a>Home ←You are here</a>
