--- a/coding.html
+++ b/coding.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="https://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
         <link href="styles.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jules' Homepage</title>
     </head>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
