--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <body>
         <div class="body-text">
-            <h1>Welcome to my homepage :D</h1>
+            <h1 style="text-align: center;">Welcome to my homepage :D</h1>
             <ul style="text-align: center;">
                 <li style="margin-left: 106px;">
                     <a>Home ←You are here</a>
