Fixing weird margins
Because I used a list for the landing page, there was some automatic CSS that was making the list of links to the other pages on the site off center, so I reworked it to not use any HTML listing and just did it with line breaks

--- a/index.html
+++ b/index.html
@@ -16,30 +16,22 @@
     <body>
         <div class="body-text">
             <h1 style="text-align: center;">Welcome to my homepage :D</h1>
-            <ul style="text-align: center;">
-                <li style="margin-left: 106px;">
-                    <a>Home ←You are here</a>
-                </li>
-                <li>
+                <div style="text-align: center">
+                    <a style="margin-left: 106px;">Home ←You are here</a>
+                    <br>
                     <a href="coding.html">Coding</a>
-                </li>
-                <li>
+                    <br>
                     <a href="music.html">Music</a>
-                </li>
-                <li>
+                    <br>
                     <a href="about.html">About</a>
-                </li>
-                <li>
+                    <br>
                     <a href="contact.html">Contact</a>
-                </li>
-                <li>
+                    <br>
                     <img src="media/vibribbon-default-dance.gif" style="width: 100%;">
-                </li>
-                <li>
+                    <br>
                     <em>"It's a fine day for learning"</em>
                     <p>— Head Scribe Vree from <b>Fallout</b> (1997)</p>
-                </li>
-            </ul>
+                </div>
         </div>
         <footer>
             <div class="footer-text">
