Mobile instructions and image resize
Added instructions to use the interactive text in coding.html and resized an image

--- a/coding.html
+++ b/coding.html
@@ -36,10 +36,12 @@
                 &emsp;I began coding in 2014 using Codecademy when I was a freshman in high school, which I found by Googling "Duolingo but for coding" because I was going through a Linguistics obsession, but I was also interested in computers and wanted get into programming. It seemed that they had just released a new Python 3 course and I started with that. It took me through the basics of programming in general, but limited in the world of Python. I ended up finishing the whole thing in two months during my freshman year of high school, but unfortunately all of the projects I made for it were lost because they were on an older computer and because Codecademy overhauled their courses several times.
                 <br>
                 &emsp;The only memorandum that I have from that time was the picture of the cracked screen of my All-In-One computer screen from back then showing the completion page that I posted on Instagram (Coincidentally almost 9 years ago to the day as of writing this on March 15, 2023):</p>
-                <img src="media/codecademy.png" style="width: 40%;">
+                <img src="media/codecademy.png" style="width: 60%;">
               <p>
                 &emsp;I stopped for a bit but then I got back into it for a little bit with their Hour of Code lesson from that year, which involved making your name appear as these colored balls that move when you mouse over them in HTML, CSS, and JavaScript. It was kinda lame though because you didn't actually write any of the code, you just customized the text and color. It looked like this:
               </p>
+              <font size="1">Tap or mouse over the letters</font>
+              <br>
               <!--Codecademy JavaScript canvas for animated name text-->
               <canvas id="myCanvas"></canvas>
               <font size="1" styles="padding-bottom: 10px;"><br>JavaScript code courtesy of Codecademy</font>
