Add images to coding.html
I felt that coding.html did not have enough imagery showing my journey, so I added some GIFs showcasing what I had done

--- a/coding.html
+++ b/coding.html
@@ -36,7 +36,7 @@
                 &emsp;I began coding in 2014 using Codecademy when I was a freshman in high school, which I found by Googling "Duolingo but for coding" because I was going through a Linguistics obsession, but I was also interested in computers and wanted get into programming. It seemed that they had just released a new Python 3 course and I started with that. It took me through the basics of programming in general, but limited in the world of Python. I ended up finishing the whole thing in two months during my freshman year of high school, but unfortunately all of the projects I made for it were lost because they were on an older computer and because Codecademy overhauled their courses several times.
                 <br>
                 &emsp;The only memorandum that I have from that time was the picture of the cracked screen of my All-In-One computer screen from back then showing the completion page that I posted on Instagram (Coincidentally almost 9 years ago to the day as of writing this on March 15, 2023):</p>
-                <img src="media/codecademy.png" style="width: 60%;">
+                <img src="media/codecademy.png" alt="Screenshot of an Instagram post I made on March 13, 2014 that showed me completing the Python course on Codecademy" style="width: 60%;">
               <p>
                 &emsp;I stopped for a bit but then I got back into it for a little bit with their Hour of Code lesson from that year, which involved making your name appear as these colored balls that move when you mouse over them in HTML, CSS, and JavaScript. It was kinda lame though because you didn't actually write any of the code, you just customized the text and color. It looked like this:
               </p>
@@ -55,6 +55,9 @@
                 <br>
                 &emsp;Not only that, I realized that you could write programs on the TI-84 calculators we used in school, and since I had my own <font size="1">(courtesy of my sister who stole it from school oops)</font>, the programs couldn't be wiped out by the teacher. This was especially useful in my physics classes as a lot of the work was just working through formulas.
                 <br>
+                <img src="media/ti-84.gif" alt="GIF showing a program I made that automated the calculating of the force of gravity between two objects given their masses and distance from each other" style="width: 60%;">
+                <font size="1">Not sure why the answer is so inaccurate here, but it worked fine on my own calculator. I blame floating point math.</font>
+                <br>
                 &emsp;During college, I didn't really touch coding at all as I too busy pursuing a degree in Linguistics at The University of Texas at Austin, however I did breifly get back into it during the second semester of my junior year of college. Unfortunately that was also the year that the pandemic hit and I left all schooling whatsoever due the chaos it caused.
               </p>
               <hr>
@@ -64,6 +67,8 @@
                 <br>
                 &emsp;I thought about how I could easily write a program in Python to make the process easier, so I got this Python IDE app for iPhone called Pythonista and wrote it in about an hour. It made my life at work so much easier to be able to cut down the ~5 minutes it takes to do that calculation manually to just a few seconds by using the program I wrote. After I showed my supervisor the program, and he tested it himself, he approved of it and I had free reign to be able to use it on the clock.
                 <br>
+                <font size="1">This is the port that I made so it would work on my computer using tkinter for the GUI, I lost the original code I made on Pythonista D:</font>
+                <img src="media/unit_weight.gif" alt="GIF showing the program that I wrote, you input a given saturated surface dry weight, weight in water, the temperature of the water, and it outputs the volume of the concrete specimen and unit weight of the specimen" style="width: 60%;">
                 &emsp;Word got around the lab that I had automated it, so my coworkers started coming to me use my program since it was <em>that</em> much easier. I kept developing the app because I realized that, while I could work comfortably within the command-line interface, my coworkers who weren't as technically inclined were not. So I worked on upgrading the user interface into a graphical one that was a lot easier on the eyes and a lot easier for people other then me to be able to use it.
               </p>
               <hr>
@@ -72,11 +77,11 @@
                 &emsp;After a brief stint working in a dental office where I realized that the most fun I had on the job was when I fixed the computer problems we had at the office such as when the printer stopped being recognized on the computers (I hate printers), I started to get the idea of "I could probably do something like this for a living," so I decided I'd get into IT (even though I really just wanted to code stuff).
                 <br>
                 &emsp;So I ended up doing IT for a small local surveying company and since they had a website that was broken, I took it upon myself to get back into learning more coding and got back on Codecademy to take their HTML course so I could fix their website. My efforts took the website from looking like this:
-                <img src="media/before_1.png" style="width: 100%;">
-                <img src="media/before_2.png" style="width: 100%;">
+                <img src="media/before_1.png" alt="website with a broken YouTube video as the background" style="width: 100%;">
+                <img src="media/before_2.png" alt="website with broken image tags and missing text" style="width: 100%;">
                 &emsp;To looking a little more like this:
-                <img src="media/after_1.png" style="width: 100%;">
-                <img src="media/after_2.png" style="width: 100%;">
+                <img src="media/after_1.png" alt="website with the YouTube background removed and replaced with a sky blue gradient" style="width: 100%;">
+                <img src="media/after_2.png" alt="website with fixed image tags and quick bio of the surveyor" style="width: 100%;">
                 &emsp;Which I admit that somebody with more experience could have done way better, but for my first real attempt at working with HTML and CSS on a website that would be seen by real clients for a real company, I thought it was a good start. Plus a lot of it was done by my superior literally watching me change the HTML in front of her, which was surprisingly nervewracking!
                 <br>&emsp;I eventually was let go from that company and had some free time in unemployment, so when YouTube started recommending me Gamedev content, with what I knew up to that point, I was like "I could probably do something like that."
                 when I saw this Tiktok from the CS50 account right after getting back into coding after the long break, I felt compelled to at least give the course a try:
@@ -87,16 +92,22 @@
               <p>
                 &emsp;I started trying to make a game, initially in Unity, but C# seemed a bit too complicated for what I knew thusfar, so I was introduced to Godot and quickly moved on to that engine (shout out to Nixon) because the scripting language, GDScript, is basically just Python and it was incredibly easy to just start writing in it once I got a grasp of the syntax. I had an idea to make a basic top-down zombie shooter in the vein of those old flash games just to get my feet wet in this new world, so I literally just looked up "top down shooter tutorial in Godot" on YouTube and came across a video by Endoparasitic developer, Miziziziz, who made a video on just that. Thankfully Miziziziz is a really good educator and gave just enough instruction in the video to get started, and down the rabbithole of gamedev I went.
                 <br>
+                <font size="1">Some very compressed footage of the gameplay</font> 
+                <img src="media/zombie-game.gif" alt="gameplay of the zombie shooter game I was working on" style="width: 100%;">
+                <br>
                 &emsp;I'll spare the details as a lot of it was just googling systems that I needed for my game, watching tutorials for code that I can incorporate into my game, and a lot of trial and error. I worked on it for a good three weeks straight before I came to the realization that I didn't know enough about coding to see this to the end. While I had a lot of fun working on it and especially working with the sounds and music of the game, I just didn't really know what I was doing, and when I was looking at other people's codes of how they solved provlems, I realized that I didn't know really basic data structure things like what an array was or how to implement a queue. Thankfully, the algorithm gods came in clutch again.
               </p>
               <hr>
               <h3>The Present</h3>
               <p>
                 &emsp;I was just mindlessly scrolling through Tiktok (I'm Gen Z) when I came across this one video that really spoke to me for some reason:
-                <video width="182" height="325" controls>
-                  <source src="media/cs50_tiktok.mp4"
-                  Your browser does not support the <video> tag ☹️
-                </video>
+                <br>
+                <div align="center">
+                  <video width="182" height="325" controls>
+                    <source src="media/cs50_tiktok.mp4">
+                    Your browser does not support the &lt;video&gt; tag ☹️
+                  </video>
+                </div>
                 <br>
                 &emsp;Harvard was my dream college when I was in grade school, so that's probably why it really stood out to me to find out at they offer their own Computer Science courses for <em>free</em> online, combined with the fact that I just stopped working on my game so that I could get a better knowledge within coding, I took it as a sign from the universe to start the CS50x course, and so I did.
                 <br>
@@ -104,7 +115,7 @@
               </p>
               <hr>
               <h3>The Future??</h3>
-              <img src="media/future.gif" style="width: 50%;">
+              <img src="media/future.gif" alt="Squidward from Spongebob on the ground crunching and saying 'future!'" style="width: 50%;">
               <p>
                 &emsp;Now that I'm nearing completion of CS50x, I hope to get a job working in tech where I get to code all day, especially if it means getting to work with like minded people. Quite frankly, I'm sick of working customer service jobs because I seriously love building things and solving problems without having to interact with people who view me with less respect than the ground they walk on.
                 <br>
