Added <a> link tags
Added some <a> link tags to things mentioned in coding.html

--- a/coding.html
+++ b/coding.html
@@ -33,12 +33,12 @@
             <div class="body-content">
               <h3>Begin Here</h3>
               <p>
-                &emsp;I began coding in 2014 using Codecademy when I was a freshman in high school, which I found by Googling "Duolingo but for coding" because I was going through a Linguistics obsession, but I was also interested in computers and wanted get into programming. It seemed that they had just released a new Python 3 course and I started with that. It took me through the basics of programming in general, but limited in the world of Python. I ended up finishing the whole thing in two months during my freshman year of high school, but unfortunately all of the projects I made for it were lost because they were on an older computer and because Codecademy overhauled their courses several times.
+                &emsp;I began coding in 2014 using <a href="https://www.codecademy.com">Codecademy</a> when I was a freshman in high school, which I found by Googling "Duolingo but for coding" because I was going through a Linguistics obsession and was using Duolingo to learn French at the time, but I was also interested in computers and wanted get into programming. It seemed that they had just released a new Python 3 course because it was the one they recommended to start with, so I started with that. It took me through the basics of programming in general, but limited to the world of Python. I ended up finishing the whole thing in two months, but unfortunately all of the projects I made for it were lost because they were on an older computer and because Codecademy overhauled their courses, including the Python one, several times over the years.
                 <br>
-                &emsp;The only memorandum that I have from that time was the picture of the cracked screen of my All-In-One computer screen from back then showing the completion page that I posted on Instagram (Coincidentally almost 9 years ago to the day as of writing this on March 15, 2023):</p>
+                &emsp;The only memorandum that I have from that time was a picture of the cracked screen on my All-In-One computer from back then showing the completion page that I posted to my Instagram (Coincidentally almost 9 years ago to the day as of writing this on March 15, 2023):</p>
                 <img src="media/codecademy.png" alt="Screenshot of an Instagram post I made on March 13, 2014 that showed me completing the Python course on Codecademy" style="width: 60%;">
               <p>
-                &emsp;I stopped for a bit but then I got back into it for a little bit with their Hour of Code lesson from that year, which involved making your name appear as these colored balls that move when you mouse over them in HTML, CSS, and JavaScript. It was kinda lame though because you didn't actually write any of the code, you just customized the text and color. It looked like this:
+                &emsp;I stopped learning anything that summer but then I got back into it for a little bit with their Hour of Code lesson from that year, which involved making your name appear as these colored balls that move when you mouse over them in HTML, CSS, and JavaScript. It was kinda lame though because you didn't actually write any of the code, you just customized the text and color. It looked like this:
               </p>
               <font size="1">Tap or mouse over the letters</font>
               <br>
@@ -53,19 +53,19 @@
               <p>
                 &emsp;I stopped seeking new knowledge in the world of programming for the rest of high school and most of college as I was knee-deep in an obsession with languages and Linguistics. However, when I took Algebra II in my sophomore year of high school, I realized that the programmatic thinking I picked up from learning to program applied really well to math and I <em>flew</em> through that class and passed with flying colors.
                 <br>
-                &emsp;Not only that, I realized that you could write programs on the TI-84 calculators we used in school, and since I had my own <font size="1">(courtesy of my sister who stole it from school oops)</font>, the programs couldn't be wiped out by the teacher. This was especially useful in my physics classes as a lot of the work was just working through formulas.
+                &emsp;Not only that, I realized that you could write programs on the TI-84 calculators we used in school, and since I had my own <font size="1">(courtesy of my sister who stole it from school oops)</font>, the programs couldn't be wiped out by my teachers. This was especially useful in Physics I and II as a lot of the work was just plugging numbers into formulas.
                 <br>
                 <img src="media/ti-84.gif" alt="GIF showing a program I made that automated the calculating of the force of gravity between two objects given their masses and distance from each other" style="width: 60%;">
-                <font size="1">Not sure why the answer is so inaccurate here, but it worked fine on my own calculator. I blame floating point math.</font>
+                <font size="1">Not sure why the answer is so inaccurate here, but it worked fine on my own calculator. I blame the floating point math implementation on the emulator I used to make this GIF.</font>
                 <br>
                 &emsp;During college, I didn't really touch coding at all as I too busy pursuing a degree in Linguistics at The University of Texas at Austin, however I did breifly get back into it during the second semester of my junior year of college. Unfortunately that was also the year that the pandemic hit and I left all schooling whatsoever due the chaos it caused.
               </p>
               <hr>
               <h3>Getting Back Into the Swing of Things</h3>
               <p>
-                &emsp;Two years later, I was working at a civil engineering firm in their soil and concrete lab as a materials tester and I came across the same problems that I did when I was in highschool physics—there was a lot of repetitive calculation of the physical properties of the materials using math that was mostly done by hand or by calculator. I realized that I could especially automate the calculation of one of the more involved calculations as it involved referencing a chart that had the density of water at various temperatures (which I don't think you can calculate, it's all measurements done by hand that had been compiled by scientists over time).
+                &emsp;Two years later, I was working at a civil engineering firm in their soil and concrete lab as a materials tester and I came across the same problems that I did when I was in highschool physics—a lot of repetitive calculations using math that was mostly done by hand/calculator. I realized that I especially could automate the calculation of one of the more involved calculations as it involved referencing a chart that had the density of water at various temperatures (which I don't think you can calculate, it's all measurements done by hand that had been compiled by scientists over time).
                 <br>
-                &emsp;I thought about how I could easily write a program in Python to make the process easier, so I got this Python IDE app for iPhone called Pythonista and wrote it in about an hour. It made my life at work so much easier to be able to cut down the ~5 minutes it takes to do that calculation manually to just a few seconds by using the program I wrote. After I showed my supervisor the program, and he tested it himself, he approved of it and I had free reign to be able to use it on the clock.
+                &emsp;I thought about how I could easily write a program in Python to make the process easier, so I got this Python IDE app for iPhone called <a href="https://apps.apple.com/us/app/pythonista-3/id1085978097">Pythonista</a> and wrote it in about an hour. It made my life at work so much easier to be able to cut down the ~5 minutes it takes to do that calculation manually to just a few seconds by using the program I wrote. After I showed my supervisor the program, and he tested it himself, he approved of it and I had free reign to be able to use it on the clock.
                 <br>
                 <font size="1">This is the port that I made so it would work on my computer using tkinter for the GUI, I lost the original code I made on Pythonista D:</font>
                 <img src="media/unit_weight.gif" alt="GIF showing the program that I wrote, you input a given saturated surface dry weight, weight in water, the temperature of the water, and it outputs the volume of the concrete specimen and unit weight of the specimen" style="width: 60%;">
@@ -79,18 +79,17 @@
                 &emsp;So I ended up doing IT for a small local surveying company and since they had a website that was broken, I took it upon myself to get back into learning more coding and got back on Codecademy to take their HTML course so I could fix their website. My efforts took the website from looking like this:
                 <img src="media/before_1.png" alt="website with a broken YouTube video as the background" style="width: 100%;">
                 <img src="media/before_2.png" alt="website with broken image tags and missing text" style="width: 100%;">
-                &emsp;To looking a little more like this:
+                <p style="text-align: center;">To looking a little more like this:</p>
                 <img src="media/after_1.png" alt="website with the YouTube background removed and replaced with a sky blue gradient" style="width: 100%;">
                 <img src="media/after_2.png" alt="website with fixed image tags and quick bio of the surveyor" style="width: 100%;">
                 &emsp;Which I admit that somebody with more experience could have done way better, but for my first real attempt at working with HTML and CSS on a website that would be seen by real clients for a real company, I thought it was a good start. Plus a lot of it was done by my superior literally watching me change the HTML in front of her, which was surprisingly nervewracking!
                 <br>&emsp;I eventually was let go from that company and had some free time in unemployment, so when YouTube started recommending me Gamedev content, with what I knew up to that point, I was like "I could probably do something like that."
-                when I saw this Tiktok from the CS50 account right after getting back into coding after the long break, I felt compelled to at least give the course a try:
                 <br>
               </p>
               <hr>
               <h3>Adventures in Gamedev</h3>
               <p>
-                &emsp;I started trying to make a game, initially in Unity, but C# seemed a bit too complicated for what I knew thusfar, so I was introduced to Godot and quickly moved on to that engine (shout out to Nixon) because the scripting language, GDScript, is basically just Python and it was incredibly easy to just start writing in it once I got a grasp of the syntax. I had an idea to make a basic top-down zombie shooter in the vein of those old flash games just to get my feet wet in this new world, so I literally just looked up "top down shooter tutorial in Godot" on YouTube and came across a video by Endoparasitic developer, Miziziziz, who made a video on just that. Thankfully Miziziziz is a really good educator and gave just enough instruction in the video to get started, and down the rabbithole of gamedev I went.
+                &emsp;I started trying to make a game, initially in <a href="https://unity.com">Unity</a>, but C# seemed a bit too complicated for what I knew thusfar, so I was introduced to <a href="https://godotengine.org">Godot</a> and quickly moved on to that engine (shout out to Nixon) because the scripting language, GDScript, is basically just Python and it was incredibly easy to just start writing in it once I got a grasp of the syntax. I had an idea to make a basic top-down zombie shooter in the vein of those old flash games just to get my feet wet in this new world, so I literally just looked up "top down shooter tutorial in Godot" on YouTube and came across this <a href="https://youtu.be/5vYI_mgERBU">video</a> by <a href="https://nartier.itch.io/endoparasitic">Endoparasitic</a> developer, <a href="https://www.youtube.com/@Miziziziz">Miziziziz</a>, who made a video on just that. Thankfully Miziziziz is a really good educator and gave just enough instruction in the video to get started, and down the rabbithole of gamedev I went.
                 <br>
                 <font size="1">Some very compressed footage of the gameplay</font> 
                 <img src="media/zombie-game.gif" alt="gameplay of the zombie shooter game I was working on" style="width: 100%;">
@@ -100,7 +99,7 @@
               <hr>
               <h3>The Present</h3>
               <p>
-                &emsp;I was just mindlessly scrolling through Tiktok (I'm Gen Z) when I came across this one video that really spoke to me for some reason:
+                &emsp;I was just mindlessly scrolling through Tiktok (I'm Gen Z) when I came across this one <a href="https://youtu.be/hbT7vzCvEc8">video</a> that really spoke to me for some reason:
                 <br>
                 <div align="center">
                   <video width="182" height="325" controls>
@@ -125,7 +124,7 @@
         </div>
         <footer>
             <div class="footer-text">
-                <font size="1">This site was made for the Harvard CS50x course</font>
+                <font size="1">This site was made for the <a href="https://cs50.harvard.edu/x/2023/">Harvard CS50x course</a></font>
             </div>
         </footer>
     </body>
