--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <footer>
             <div class="footer-text">
-                <font size="1">This site was made for the Harvard CS50x course, VibRibbon gif by <a href="https://www.deviantart.com/codydbuni/art/Gmod-Shitpost-Vibri-Default-Dance-781547634">CodyDBuni</a> on DeviantArt</font>
+                <font size="1">This site was made for the <a href="https://cs50.harvard.edu/x/2023/">Harvard CS50x course</a>, VibRibbon gif by <a href="https://www.deviantart.com/codydbuni/art/Gmod-Shitpost-Vibri-Default-Dance-781547634">CodyDBuni</a> on DeviantArt</font>
             </div>
         </footer>
     </body>
