--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         </div>
         <footer>
             <div class="footer-text">
-                <font size='1'>This site was made for the Harvard CS50x course</font>
+              <font size="1">This site was made for the <a href="https://cs50.harvard.edu/x/2023/">Harvard CS50x course</a></font>
             </div>
         </footer>
     </body>
