fixed video tag not working on mobile (hopefully)

--- a/coding.html
+++ b/coding.html
@@ -102,9 +102,9 @@
                 &emsp;I was just mindlessly scrolling through Tiktok (I'm Gen Z) when I came across this one <a href="https://youtu.be/hbT7vzCvEc8">video</a> that really spoke to me for some reason:
                 <br>
                 <div align="center">
-                  <video width="182" height="325" controls>
-                    <source src="media/cs50_tiktok.mp4">
-                    Your browser does not support the &lt;video&gt; tag ☹️
+                  <video controls style="width: 100%;">
+                    <source src="media/cs50-tiktok.webm" type="video/webm">
+                    <source src="media/cs50-tiktok.mp4" type="video/mp4">
                   </video>
                 </div>
                 <br>
