actually fixed the video not working on mobile, added muted autoplay

--- a/coding.html
+++ b/coding.html
@@ -101,12 +101,11 @@
               <p>
                 &emsp;I was just mindlessly scrolling through Tiktok (I'm Gen Z) when I came across this one <a href="https://youtu.be/hbT7vzCvEc8">video</a> that really spoke to me for some reason:
                 <br>
-                <div align="center">
-                  <video controls style="width: 100%;">
-                    <source src="media/cs50-tiktok.webm" type="video/webm">
-                    <source src="media/cs50-tiktok.mp4" type="video/mp4">
-                  </video>
-                </div>
+                <video align="center" muted autoplay style="width: 100%;" height="400px">
+                  <source src="media/cs50-tiktok.webm" type="video/webm">
+                  <source src="media/cs50-tiktok.mp4" type="video/mp4">
+                  Your browser does not support the &lt;video&gt; tag :(
+                </video>
                 <br>
                 &emsp;Harvard was my dream college when I was in grade school, so that's probably why it really stood out to me to find out at they offer their own Computer Science courses for <em>free</em> online, combined with the fact that I just stopped working on my game so that I could get a better knowledge within coding, I took it as a sign from the universe to start the CS50x course, and so I did.
                 <br>
