Update coding.html hopefully fix video
Edited the <video> tag and added the "playsinline" attribute to hopefully fix the video not loading on Safari on MacOS

--- a/coding.html
+++ b/coding.html
@@ -101,7 +101,7 @@
               <p>
                 &emsp;I was just mindlessly scrolling through Tiktok (I'm Gen Z) when I came across this one <a href="https://youtu.be/hbT7vzCvEc8">video</a> that really spoke to me for some reason:
                 <br>
-                <video align="center" muted autoplay style="width: 100%;" height="400px">
+                <video align="center" muted autoplay playsinline style="width: 100%;" height="400px">
                   <source src="media/cs50-tiktok.webm" type="video/webm">
                   <source src="media/cs50-tiktok.mp4" type="video/mp4">
                   Your browser does not support the &lt;video&gt; tag :(
